# hodoscope

./: .gitignore  CLAUDE.md  CNAME  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: publish.yml  test.yml
blog/: announcement.html  livepaper.html
examples/swebench_docent/: README.md
examples/swebench_iquest/: README.md  replicate.bash
examples/test_summary/: README.md  examples.json  run.py
hodoscope/: __init__.py  actions.py  cli.py  config.py  core.py  io.py  parsers.py  pipeline.py  sampling.py  visualization.py
hodoscope/docent/: __init__.py  convert_to_trajectory.py  export_transcripts.py
hodoscope/eval/: __init__.py  convert_to_trajectory.py
hodoscope/openhands/: __init__.py  convert_to_trajectory.py
js/: bg-animation.js
tests/: conftest.py  test_analyze.py  test_api.py  test_io.py  test_sampling.py  test_viz.py
tests/sample_evals/: sample1.hodoscope.json  sample2.hodoscope.json
